# Po

./: IMPLEMENTATION_PLAN.md  README.md  railway.json  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml  deploy.yml  django.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/orchestrator_agent/: __init__.py  __main__.py  agents.py  analytics.py  approvals.py  auth.py  checkpoint.py  config_api.py  conversations.py  llm_manager.py  llm_providers.py  models.py  orchestrator.py  persistence.py  scheduler.py  server.py  signals.py  tools.py  validation.py  verification.py  verifiers.py
backend/scripts/: smoke_test.py  test_api_keys.py
backend/tests/: test_analytics.py  test_approvals.py  test_auth.py  test_checkpoint.py  test_config_api.py  test_conversations.py  test_integration.py  test_intent_classifier.py  test_models.py  test_openrouter.py  test_persistence.py  test_pipeline_trust.py  test_plan_workflow.py  test_scheduler.py  test_signals.py  test_tools.py  test_validation.py  test_verification.py  test_verifiers.py
web/: dashboard.html  index.html  live.html  operator.html
web-app/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
web-app/app/: globals.css  layout.tsx  page.tsx
web-app/app/approvals/: page.tsx
web-app/app/login/: page.tsx
web-app/app/orchestrate/: page.tsx
web-app/components/: sidebar.tsx
web-app/lib/: api.ts  auth-context.tsx
web/assets/: dashboard-DBkkrot1.js  live.js
(+15 files in other folders)
